2. Close players menu 3/4 of a second after long-press on 'Manage players'
   entry.
3. If set to show technical info then also append this to track details when
   using 'Copy details' action.
4. Add 'BBC Sounds' to sources mapping.
5. When checking if source is already in tech info, remove spaces from source.
6. Place source at end, not start, of tech info.

2.8.3
-----
1. Update traslations.
2. Add track source (Spotify, Qobuz, etc.) to technical info.
3. Slightly alter metrics of desktop layout toolbar to help on iPad. If iPad
   is not detected, or padding required elsewhere, add "?addpadd" to URL.
4. Catch exceptions when try to access localstorage.
5. Fix setting disc title from comment.
6. Move 'Stop button' config option into 'Now playing' section, as that is where
   it applies.
7. Set cursor for menu items.
8. Fix bottom toolbar button positions if stop button is shown.
9. Only open sync dialog on long-press of 'Manage players' menu entry.

2.8.2
-----
1. Only show multi-disc icon, and prompt for disc to use, etc., if LMS is set to
   group multi-disc albums.
2. Add add and play actions to subtoolbar for 'All songs' listings.
3. Don't show disc headers in 'All songs' listings.
4. Hide settings password.
5. Update gallery image when track changes if this is showing now playing cover.
6. Only show 'Play disc starting at track' if there are multiple discs.

2.8.1
-----
1. Fix hiding queue.
2. Reduce desktop splitter width to 1px.
3. When navigating lists by entering text, if press enter then 'click' on first
   match.
4. Close expanded now-playing via 'esc' key on desktop layout.
5. If displaying a "More..." list and there is already a "More..." entry in
   the history, then clear history up to previous "More..." - so that there is
   only 1 "More..." entry.

2.8.0
-----
 1. Draw multi-disc icon top-left for multi-disc albums, in grid view.
 2. Add 'Remove disc' option to play queue context menu.