@@ -119,3 +119,6 @@ const VOL_STD    = 0;
 const VOL_FIXED  = 1;
 const VOL_HIDDEN = 2;
 
+const IFRAME_HOME_NAVIGATES_BROWSE_HOME = 1
+const IFRAME_HOME_CLOSES_DIALOGS = 2
+
